# udacity_sensor_fusion

./: .gitignore  README.md
2d_features/: README.md  installOpenCV-4-on-Ubuntu-16-04.sh
2d_features/src/: MidTermProject_Camera_Student.cpp  dataStructures.h  matching2D_Student.cpp
3d_object_tracking/: README.md
3d_object_tracking/results/: fp6.csv
3d_object_tracking/src/: FinalProject_Camera.cpp  camFusion_Student.cpp
3d_track/src/: FinalProject_Camera.cpp  matching2D_Student.cpp
camera/src/: MidTermProject_Camera_Student.cpp  matching2D_Student.cpp
lidar/: CMakeLists.txt  README.md
lidar/src/: environment.cpp  kdtree.h  no_pcl_environment_ransac.cpp  no_pcl_environment_ransac_kdtree.cpp  no_pcl_processPointClouds_ransac.cpp  no_pcl_processPointClouds_ransac_kdtree.cpp  pcl_environment_filtered.cpp  pcl_environment_filtered_segamented.cpp  pcl_environment_filtered_segamented_clustered.cpp  pcl_environment_filtered_segamented_clustered_stream.cpp  processPointClouds.cpp
radar/: README.md  radar-target-generation-and-detection.m
ukf/: README.md
ukf/src/: ukf.cpp  ukf.h
